--- a/application/views/default/tambah-pengajar-ampuan.html
+++ b/application/views/default/tambah-pengajar-ampuan.html
@@ -22,7 +22,7 @@
         </tr>
         <tr>
             <th>Mapel <span class="text-error">*</span></th>
-            <td>
+            <!-- <td>
                 <select name="mapel_kelas_id" style="width:auto" id="mapel_kelas_id">
                     <option value="">Pilih Matapelajaran</option>
                     {% if get_post_data('kelas_id') is not empty %}
@@ -37,6 +37,15 @@
                     {% endif %}
                 </select>
                 <br><span class="text-muted">Pilih kelas terlebih dahulu</span>
+                <br>{{ form_error('mapel_kelas_id')|raw }}
+            </td> -->
+            <td>
+                <select name="mapel_kelas_id" style="width:auto;" id="mapel_kelas_id">
+                    <option value="">Pilih Mapel</option>
+                    {% for k in mapel %}
+                    <option value="{{ k.id }}" {{ set_select('mapel_kelas_id', k.id) }}>{{ k.nama }}</option>
+                    {% endfor %}
+                </select>
                 <br>{{ form_error('mapel_kelas_id')|raw }}
             </td>
         </tr>
