--- a/application/views/default/list-tugas.html
+++ b/application/views/default/list-tugas.html
@@ -16,7 +16,7 @@ Tugas - {{ parent() }}
             {% if (is_siswa() == false) %}
             <div class="btn-group pull-right" style="margin-top:-5px;">
                 <!-- {{ anchor('tugas/add/3', 'Tambah Tugas Ganda', {'class' : 'btn btn-primary'})|raw }} -->
-                {{ anchor('tugas/add/2', 'Tambah Tugas Essay', {'class' : 'btn btn-primary'})|raw }}
+                {{ anchor('tugas/add/2', 'Tambah Tugas', {'class' : 'btn btn-primary'})|raw }}
                 {{ anchor('tugas/add/1', 'Tambah Tugas Upload', {'class' : 'btn btn-primary'})|raw }}
             </div>
             {% endif %}
