--- a/application/views/default/edit-materi.html
+++ b/application/views/default/edit-materi.html
@@ -12,7 +12,7 @@ Edit Materi - {{ parent() }}
     <div class="module-body">
         {{ get_flashdata('materi')|raw }}
 
-        {{ form_open_multipart('materi/edit/' ~ type ~ '/' ~ materi.id ~ '/' ~ enurl_redirect(uri_back), {'class' : 'form-horizontal row-fluid'})|raw }}
+        {{ form_open_multipart('materi/edit/' ~ type ~ '/' ~ materi.id ~ '/', {'class' : 'form-horizontal row-fluid'})|raw }}
             <div class="control-group">
                 <label class="control-label">Judul <span class="text-error">*</span></label>
                 <div class="controls">
