--- a/application/views/default/layout-private.html
+++ b/application/views/default/layout-private.html
@@ -49,7 +49,7 @@
                                     <li>{{ anchor('login/pp', 'Profil & Akun Login')|raw }}</li>
                                     {% endif %}
 
-                                    <li><a href="{{ site_url('login/login_log/' ~ get_sess_data('login', 'id')) }}">Login log</a></li>
+                                    <!-- <li><a href="{{ site_url('login/login_log/' ~ get_sess_data('login', 'id')) }}">Login log</a></li> -->
                                     <li><a href="{{ site_url('login/logout') }}">Logout</a></li>
                                 </ul>
                             </li>
