--- a/application/views/default/welcome.html
+++ b/application/views/default/welcome.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="btn-box-row row-fluid">
-        <div class="span6">
+        <!-- <div class="span6">
             <div class="well well-small well-box">
                 <b><i class="icon-bullhorn"></i> Pengumuman</b>
                 <table class="table table-striped table-condensed">
@@ -87,8 +87,8 @@
                 <b><i class="icon-signin"></i> Riwayat login pengguna</b>
                 <div id="show-last-login-list"></div>
             </div>
-        </div>
-        <div class="span6">
+        </div> -->
+        <!-- <div class="span6">
             <div class="well well-small well-box">
                 <div class="pull-right">
                     <a class="muted" href="{{ portal_update_link }}" target="_tab">Portal update</a> |
@@ -98,7 +98,7 @@
                 <table class="table table-striped table-condensed" id="info-update"></table>
                 <input type="hidden" id="info-update-link" value="{{ info_update_link }}">
             </div>
-        </div>
+        </div> -->
     </div>
     {% endif %}
 
@@ -116,7 +116,7 @@
     {% endif %}
 
     <div class="btn-box-row row-fluid">
-        <div class="span6">
+        <!-- <div class="span6">
             <div class="well well-small well-box">
                 <b><i class="icon-bullhorn"></i> Pengumuman</b>
                 <table class="table table-striped table-condensed">
@@ -133,7 +133,7 @@
                 <b><i class="icon-signin"></i> Riwayat login pengguna</b>
                 <div id="show-last-login-list"></div>
             </div>
-        </div>
+        </div> -->
     </div>
     {% endif %}
 
@@ -179,7 +179,7 @@
             </div>
         </div>
 
-        <div class="span6">
+        <!-- <div class="span6">
             <div class="well well-small well-box">
                 <b><i class="icon-bullhorn"></i> Pengumuman</b>
                 <table class="table table-striped table-condensed">
@@ -189,12 +189,12 @@
                     </tr>
                     {% endfor %}
                 </table>
-            </div>
+            </div> 
 
-            <div class="well well-small well-box">
+             <div class="well well-small well-box">
                 <b><i class="icon-signin"></i> Riwayat login pengguna</b>
                 <div id="show-last-login-list"></div>
-            </div>
+            </div> -->
         </div>
     </div>
     {% endif %}
